Update to use the appclient procedure from the EE10 runs